--- a/Portal.Client/Components/UIComponents/StatusBadge.razor
+++ b/Portal.Client/Components/UIComponents/StatusBadge.razor
@@ -34,7 +34,8 @@
         display: flex;
         align-items: center;
         gap: 6px;
-        width: fit-content;
+        width: 120px;
+        text-align: center;
     }
 
 </style>
