--- a/Portal.Client/wwwroot/css/app.css
+++ b/Portal.Client/wwwroot/css/app.css
@@ -40,6 +40,10 @@ body {
     margin-right: auto; /* Same as the width of the quicksearch */
 }
 
+h6 {
+    color: var(--color-primary);
+    font-weight: 600;
+}
 h5 {
     color: var(--color-primary);
     font-weight: 600;
